--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "an electron app",
   "main": "index.js",
   "scripts": {
+    "rebuild": ".\\node_modules\\.bin\\electron-rebuild",
     "distribute": "npm run lint && electron-packager . --overwrite --prune=true --asar --out=release-builds --all",
     "lint": "eslint --fix --ext .js,.jsx .",
     "start": "electron ."
@@ -25,6 +26,8 @@
     "eslint": "^7.21.0"
   },
   "dependencies": {
-    "electron-packager": "^15.2.0"
+    "electron-packager": "^15.2.0",
+    "electron-rebuild": "^2.3.5",
+    "robotjs": "^0.6.0"
   }
 }
