--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint": "^7.21.0"
   },
   "dependencies": {
+    "dotenv": "^8.2.0",
     "electron-packager": "^15.2.0",
     "electron-rebuild": "^2.3.5",
     "robotjs": "^0.6.0"
