--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "dotenv": "^8.2.0",
     "electron-packager": "^15.2.0",
     "electron-rebuild": "^2.3.5",
-    "robotjs": "^0.6.0",
+    "kbm-robot": "^0.0.4",
     "socket.io-client": "^3.1.2"
   }
 }
